2011-01-15  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Update NEWS about the warnings-over-strictness precedence.
	* NEWS: Automake explicit warning levels always take precedence
	over the implicit warning levels implied by Automake strictness.

	For PR automake/547:
	Warnings win over strictness in AUTOMAKE_OPTIONS.
	Ensure that, for what concerns the options specified in
	AUTOMAKE_OPTIONS, explicitly-defined warnings always take
	precedence over implicit strictness-implied warnings.
	This finally fixes Automake bug#7669 a.k.a. PR/547.
	* automake.in (handle_options): Call 'process_option_list'
	only once per set of options.
	* lib/Automake/Options.pm (process_global_option_list,
	process_option_list): Add sanity checks.
	($_options_processed, $_global_options_processed): New
	internal variables, used by the sanity checks above.
	* tests/warnings-win-over-strictness.test: Extend.

	For PR automake/547:
	Change signature of 'Automake::Options::_process_option_list()'.
	This only modifies internal details in the automake implementation,
	bearing no externally visible effect, but preparing the way for the
	final fix of Automake bug#7669 a.k.a. PR/547.
	* lib/Automake/Options.pm (_process_option_list): Accept as
	arguments a list of hash references with keys 'option' and 'where',
	where 'option' is an option as might occur in AUTOMAKE_OPTIONS or
	AM_INIT_AUTOMAKE, and 'where' is the location where it occurred.
	(process_option_list, process_global_option_list): Updated.
	* automake.in (handle_options, scan_autoconf_traces): Update.

	Add more tests about AUTOMAKE_OPTIONS.
	In view of soon-to-follow refactorings (still in the pursuit of a
	fix for Automake bug#7669 a.k.a. PR/547), add some more tests on
	AUTOMAKE_OPTIONS support, to prevent obvious regressions.
	* tests/amopts-variable-expansion.test: New test.
	* tests/amopts-location.test: Likewise.
	* tests/Makefile.am (TESTS): Update.

	For PR automake/547:
	Warnings win over strictness in AM_INIT_AUTOMAKE.