@@ -1,5 +1,11 @@
 2011-01-15  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	More tests on warnings/strictness precedence.
+	* tests/warning-groups-win-over-strictness.test: New test, similar
+	to `warnings-win-over-strictness.test', but checking the explicit
+	catch-all warning flags (like `-Wall' and `-Wnone').
+	* tests/Makefile.am (TESTS): Update.
+
 	Update NEWS about the warnings-over-strictness precedence.
 	* NEWS: Automake explicit warning levels always take precedence
 	over the implicit warning levels implied by Automake strictness.
